tests/paczka1/fuzzy1/48587581.err
Error in line 12: S426 A602 86,4
Error in line 14: S426 S426 61,8
Error in line 15: 1vZG A234 56,0
Error in line 37: S426 A602 3,6
